@@ -1,3 +1,7 @@
+2002-10-14  Moshe Zadka <moshez@twistedmatrix.com>
+
+	* twisted/tap/web.py twisted/web/script.py doc/man/mktap.1: adding an option to have a resource script as the root
+
 2002-10-13  Moshe Zadka <moshez@twistedmatrix.com>
 
 	* twisted/internet/utils.py twisted/internet/process.py
